--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
     "minimum-stability": "dev",
     "require": {
         "vlucas/phpdotenv": "5.4.x-dev"
+    },
+    "required-dev":{
+        "vlucas/phpdotenv": "5.4.x-dev"
     }
 }
